@@ -87,6 +87,7 @@ Internal:
 - Better support for advanced 2-2 classes.
 - Guild member job ID format is now the same as char job ID format.
 - IPC protocol's numbers are now in big endian format.
+- is_casting plugin hook.
 
 
 Credits:
